# oakwood

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  pyproject.toml
src/oakwood/: __init__.py  activity_log.py  app.py  backup.py  cli.py  database.py  importer.py  mcp_server.py  models.py  oakwood.tcss  openlibrary.py  settings.py  ui.py
src/oakwood/screens/: __init__.py  about.py  activity.py  backup.py  book_detail.py  book_edit.py  browse.py  import_csv.py  main.py  verify.py
src/oakwood/widgets/: __init__.py  book_table.py  stats_panel.py
