[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oakwood"
version = "0.1.0"
description = "A tool for managing a personal book catalogue"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["textual>=0.80.0", "pandas>=2.0"]

[project.scripts]
oakwood = "oakwood.app:main"

[tool.setuptools.packages.find]
where = ["src"]
