[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oakwood"
dynamic = ["version"]
description = "A tool for managing a personal book catalogue"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = ["textual>=0.80.0", "pandas>=2.0"]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]

[project.scripts]
oakwood = "oakwood.app:main"
oakwood-mcp = "oakwood.mcp_server:main"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["src"]
